--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,30 @@
     android:padding="10dp"
     tools:context="com.zzw.squirrel.activity.MainActivity">
 
-    <TextView
-        android:id="@+id/info_text"
+    <Button
+        android:id="@+id/start_bt"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:gravity="center_horizontal"
+        android:text="开始采集" />
+
+    <Button
+        android:id="@+id/stop_bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="停止采集" />
+
+    <Button
+        android:id="@+id/pack_bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="压缩打包" />
+
+    <TextView
+        android:id="@+id/info_tx"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:textSize="16sp" />
 </LinearLayout>
